[gd_scene load_steps=6 format=3 uid="uid://bm0xshfwgjqgf"]

[ext_resource type="Script" uid="uid://c65e36s27sk4o" path="res://scripts/GameManager.gd" id="1_x1h3m"]
[ext_resource type="PackedScene" uid="uid://bfnqnf6rktrly" path="res://scenes/Player.tscn" id="2_b3xq0"]
[ext_resource type="PackedScene" uid="uid://dv1qp2j4l4xg" path="res://scenes/Enemy.tscn" id="3_7h8x8"]
[ext_resource type="Script" uid="uid://bb828tukidp8b" path="res://scripts/UIManager.gd" id="4_ui_script"]

[sub_resource type="LabelSettings" id="LabelSettings_1a2b3"]
font_color = Color(0, 1, 0, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_x1h3m")
player_scene = ExtResource("2_b3xq0")
enemy_scene = ExtResource("3_7h8x8")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(240, 320)

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("4_ui_script")

[node name="StageProgressBar" type="ProgressBar" parent="UI"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 16.0
modulate = Color(1, 1, 0, 0.9)
value = 0.0
show_percentage = false

[node name="GameInfo" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InfoPanel" type="Panel" parent="UI/GameInfo"]
modulate = Color(0, 1, 0, 0.7)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -140.0
offset_right = 200.0
offset_bottom = -10.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameInfo/InfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreLabel" type="Label" parent="UI/GameInfo/InfoPanel/VBoxContainer"]
layout_mode = 2
text = "Score: 0"
label_settings = SubResource("LabelSettings_1a2b3")

[node name="EnemyRateLabel" type="Label" parent="UI/GameInfo/InfoPanel/VBoxContainer"]
layout_mode = 2
text = "EnemyRate: 0.02"
label_settings = SubResource("LabelSettings_1a2b3")

[node name="LivesLabel" type="Label" parent="UI/GameInfo/InfoPanel/VBoxContainer"]
layout_mode = 2
text = "Lives: 5"
label_settings = SubResource("LabelSettings_1a2b3")

[node name="BombLabel" type="Label" parent="UI/GameInfo/InfoPanel/VBoxContainer"]
layout_mode = 2
text = "Bomb: Z key"
label_settings = SubResource("LabelSettings_1a2b3")

[node name="StageLabel" type="Label" parent="UI/GameInfo/InfoPanel/VBoxContainer"]
layout_mode = 2
text = "Stage 1"
label_settings = SubResource("LabelSettings_1a2b3")

[node name="StageProgress" type="ProgressBar" parent="UI/GameInfo/InfoPanel/VBoxContainer"]
layout_mode = 2
value = 0.0
show_percentage = false

[node name="StartScreen" type="ColorRect" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="Panel" type="Panel" parent="UI/StartScreen"]
modulate = Color(1, 1, 0, 0.9)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/StartScreen/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="UI/StartScreen/Panel/VBoxContainer"]
layout_mode = 2
text = "弾幕系
縦シューティング"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="UI/StartScreen/Panel/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="HighScoreButton" type="Button" parent="UI/StartScreen/Panel/VBoxContainer"]
layout_mode = 2
text = "High Scores"

[node name="GameOverScreen" type="ColorRect" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="Panel" type="Panel" parent="UI/GameOverScreen"]
modulate = Color(1, 1, 0, 0.9)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameOverScreen/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="UI/GameOverScreen/Panel/VBoxContainer"]
layout_mode = 2
text = "GAME OVER"
horizontal_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="UI/GameOverScreen/Panel/VBoxContainer"]
layout_mode = 2
text = "Score: 0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="UI/GameOverScreen/Panel/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="ViewHighScoresButton" type="Button" parent="UI/GameOverScreen/Panel/VBoxContainer"]
layout_mode = 2
text = "View High Scores"

[node name="FlashEffect" type="ColorRect" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.9)
mouse_filter = 2
z_index = 100
